--- a/public/html/home.html
+++ b/public/html/home.html
@@ -13,12 +13,11 @@
         <a href="#" class="navbar-logo">TaskManager</a>
         <ul class="navbar-menu">
           <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
-
           <li class="navbar-item">
-            <a href="/signup" class="navbar-link">Signup</a>
+            <a href="/posts" class="navbar-link">Posts</a>
           </li>
           <li class="navbar-item">
-            <a href="/signup" class="navbar-link">Signin</a>
+            <a href="/signup" class="navbar-link">Signup</a>
           </li>
         </ul>
       </div>
